--- a/site/src/index.css
+++ b/site/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: Roboto, sans-serif;
 }
+
+input::-webkit-input-placeholder {
+  color: #d0d0d0;
+}
+
+pre {
+  overflow: scroll;
+}
